css/index_styles.css
@import "font_size.css";


:root {
    --page-margin: 0vw 10vw;
}

*{
    font-family: 'Roboto', sans-serif;
    margin: 0px;
}

body {
    display: flex;
    flex-direction: column;
    overflow-x: hidden;
}

/* First panel*/

.banner {
    background-image: url("../images/banner.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 750px;
    display: flex;
    align-items: center;
    flex: none;
}

.first-panel{
    margin: var(--page-margin);
    width: 700px;
    overflow-x: visible;
}

.first-panel span {
    background-color: white;
}

.click{
    display: block;
    margin: 10px 0px;
    background-color: rgb(232, 0, 66);
    border-radius: 8px;
    border: none;
    padding: 8px 24px;
    color: white;
    font-size: var(--normal-font-size);
    font-weight: 700;
    min-width: 7vw;
    cursor: pointer;
}

h1,
.subtext {
    margin: 7px 0px;
}

/* Second panel */

.second-panel{
    background: rgb(49, 49, 49);
    padding-bottom: 20px;
}

.second-panel h2{
    text-align: center;
    color: white;
    margin: 50px 10vw;
}

.picture-panel {
    display: flex;
    margin: var(--page-margin);
    justify-content: space-around;
    gap: 20px;
    flex-wrap: wrap;
}

.info{
    max-width: 300px;
    text-align: center;
    flex: 1;
}

.info-text {
    color: white;
    text-align: center;
    margin: 10px 0px;
    font-family: 'Courier New', Courier, monospace;
    font-size: var(--small-font-size);
}

.picture-panel img {
    width: 200px;
    height: 200px;
    border: 5px solid rgb(232, 0, 66);
    border-radius: 8px;
    margin: 10px 0px;
}

/* Third Panel*/

.third-panel {
    background-color: grey;
    padding: 50px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.quote{
    font-style: italic;
    font-weight: lighter;
    margin: var(--page-margin);
    font-size: var(--normal-font-size);
    max-width: 600px;
    text-align: center;
}
.quote-author{
    text-align: end;
    font-weight: bold;
    font-size: var(--small-font-size);
    margin: 5px 0px;
}

/* Fourth Panel*/

.fourth-panel{
    background: rgb(49, 49, 49);
}

.fourth-panel h2{
    margin: 30px 10vw;
    color:white;
}

.fourth-panel ul {
    margin: 30px 10vw;
}

.fourth-panel li{
    font-size: var(--bigger-font-size);
    margin: 5px 0px;
    color:rgb(232, 0, 66)
}

.fourth-panel a{
    text-decoration: none;
    color:rgb(232, 0, 66)
}

/*other*/

h1{
    color: rgb(232, 0, 66);
    font-size: var(--big-font-size);
}

h2{
    font-size: var(--bigger-font-size);
}

.subtext{
    color: rgb(145, 49, 76);
    font-size: var(--bigger-font-size);
}
ul {
    padding-inline-start: 0px;
    list-style-type: none;
}

